First page done

--- a/input.css
+++ b/input.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    ::-webkit-scrollbar {
+        width: 1px; 
+        height: 1px;
+        padding-bottom: 10px;
+        display: none;
+      }
+      
+      ::-webkit-scrollbar-thumb {
+        background-color: #888; 
+        border-radius: 1px; 
+        margin-bottom: 20px;
+        display: none;
+      }
+}
