--- a/styles.css
+++ b/styles.css
@@ -568,6 +568,10 @@ video {
   bottom: 0px;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -674,6 +678,19 @@ video {
   height: 100px;
 }
 
+.h-full {
+  height: 100%;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .max-h-screen {
   max-height: 100vh;
 }
@@ -681,6 +698,14 @@ video {
 .max-h-fit {
   max-height: -moz-fit-content;
   max-height: fit-content;
+}
+
+.max-h-\[800px\] {
+  max-height: 800px;
+}
+
+.max-h-full {
+  max-height: 100%;
 }
 
 .min-h-\[200px\] {
@@ -697,6 +722,10 @@ video {
 
 .min-h-\[300px\] {
   min-height: 300px;
+}
+
+.min-h-\[800px\] {
+  min-height: 800px;
 }
 
 .w-1 {
@@ -745,6 +774,10 @@ video {
 
 .grow {
   flex-grow: 1;
+}
+
+.basis-auto {
+  flex-basis: auto;
 }
 
 .border-collapse {
@@ -813,6 +846,10 @@ video {
 
 .gap-5 {
   gap: 1.25rem;
+}
+
+.self-auto {
+  align-self: auto;
 }
 
 .self-center {
@@ -928,6 +965,16 @@ video {
   border-color: rgb(98 100 147 / var(--tw-border-opacity));
 }
 
+.border-slate-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity));
+}
+
+.border-blue-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
+
 .border-b-\[rgba\(255\2c 255\2c 255\2c 0\.15\)\] {
   border-bottom-color: rgba(255,255,255,0.15);
 }
@@ -967,6 +1014,23 @@ video {
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
   background-color: rgba(0,0,0,0.8);
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-black\/30 {
+  background-color: rgb(0 0 0 / 0.3);
+}
+
+.bg-black\/60 {
+  background-color: rgb(0 0 0 / 0.6);
+}
+
+.bg-black\/80 {
+  background-color: rgb(0 0 0 / 0.8);
 }
 
 .bg-gradient-to-bl {
@@ -1047,6 +1111,16 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1069,6 +1143,14 @@ video {
 
 .pb-4 {
   padding-bottom: 1rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .text-center {
@@ -1169,6 +1251,12 @@ video {
   text-decoration-line: underline;
 }
 
+.shadow-\[0px_1px_15px_5px_\#16172E\] {
+  --tw-shadow: 0px 1px 15px 5px #16172E;
+  --tw-shadow-colored: 0px 1px 15px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1225,8 +1313,34 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:h-\[900px\] {
+    height: 900px;
+  }
+
+  .sm\:h-\[1000px\] {
+    height: 1000px;
+  }
+
+  .sm\:max-h-\[800px\] {
+    max-height: 800px;
+  }
+
   .sm\:max-w-\[460px\] {
     max-width: 460px;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:h-\[600px\] {
+    height: 600px;
+  }
+
+  .md\:h-\[800px\] {
+    height: 800px;
+  }
+
+  .md\:h-\[900px\] {
+    height: 900px;
   }
 }
 
