--- a/styles.css
+++ b/styles.css
@@ -621,6 +621,14 @@ video {
   margin-bottom: 1rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -1033,6 +1041,11 @@ video {
   background-color: rgb(0 0 0 / 0.8);
 }
 
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-bl {
   background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
 }
@@ -1119,6 +1132,11 @@ video {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .pb-2 {
@@ -1257,6 +1275,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-\[0px_8px_28px_15px_rgba\(80\2c 82\2c 142\2c 0\.84\)\] {
+  --tw-shadow: 0px 8px 28px 15px rgba(80,82,142,0.84);
+  --tw-shadow-colored: 0px 8px 28px 15px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1321,12 +1345,28 @@ video {
     height: 1000px;
   }
 
+  .sm\:h-\[1300px\] {
+    height: 1300px;
+  }
+
+  .sm\:h-\[800px\] {
+    height: 800px;
+  }
+
   .sm\:max-h-\[800px\] {
     max-height: 800px;
   }
 
   .sm\:max-w-\[460px\] {
     max-width: 460px;
+  }
+
+  .sm\:rounded-md {
+    border-radius: 0.375rem;
+  }
+
+  .sm\:rounded-xl {
+    border-radius: 0.75rem;
   }
 }
 
